fix text wrap

--- a/public/css/hal1.css
+++ b/public/css/hal1.css
@@ -220,6 +220,12 @@ a {
     height: 15.5275em;
 }
 
+#news .tittle-left {
+    width: 100%;
+    height: 1.4em;
+    overflow: hidden;
+}
+
 #news .desc-left {
     width: 100%;
     height: 9.3em;
@@ -257,9 +263,15 @@ a {
     height: 24.8263em;
 }
 
+#news .tittle-right {
+    width: 100%;
+    height: 1.4em;
+    overflow: hidden;
+}
+
 #news .desc-right {
     width: 80%;
-    height: 4em;
+    height: 4.8em;
     overflow: hidden;
 }
 
